--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <li><a href="./superhero/">Superhero</a></li>
                 <li><a href="./united/">United</a></li>
                 <li><a href="./yeti/">Yeti</a></li>
+                <li><a href="./gurly/">Yeti</a></li>
               </ul>
             </li>
             <li>
